--- a/configs/Config-DSLR.yml
+++ b/configs/Config-DSLR.yml
@@ -13,14 +13,14 @@ OPTIM:
   LR_INITIAL: 2e-4
   LR_MIN: 1e-6
   SEED: 3407
-  WANDB: False
+  WANDB: True
 
 TRAINING:
   VAL_AFTER_EVERY: 1
   RESUME: False
   WEIGHT: ''
-  PS_W: 128
-  PS_H: 128
+  PS_W: 256
+  PS_H: 256
   TRAIN_DIR: '../dataset/LOL-v1/train' # path to training data
   VAL_DIR: '../dataset/LOL-v1/test'   # path to validation data
   SAVE_DIR: './checkpoints'  # path to save models
