--- a/configs/Config-LLFormer.yml
+++ b/configs/Config-LLFormer.yml
@@ -2,18 +2,18 @@ VERBOSE: True
 
 MODEL:
   SESSION: 'LLIE'
-  MODEL: 'RetinexNet'
+  MODEL: 'LLFormer'
   INPUT: 'input'
   TARGET: 'target'
 
 # Optimization arguments.
 OPTIM:
-  BATCH_SIZE: 8
+  BATCH_SIZE: 4
   NUM_EPOCHS: 200
   LR_INITIAL: 2e-4
   LR_MIN: 1e-6
   SEED: 3407
-  WANDB: False
+  WANDB: True
 
 TRAINING:
   VAL_AFTER_EVERY: 1
